@@ -12,6 +12,7 @@
 
 ngIRCd HEAD
 
+  - Install a LaunchDaemon script to start/stop ngIRCd on Mac OS X.
   - Implemented IRC commands INFO, SUMMON (dummy), and USERS (dummy) and
     enhanced test suite to check these commands. (Dana Dahlstrom)
   - RPL_WHOREPLY messages generated by IRC_WHO didn't include flags (*,@,+).
@@ -751,4 +752,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.340 2008/02/17 13:26:41 alex Exp $
+$Id: ChangeLog,v 1.341 2008/02/17 15:31:14 alex Exp $
